// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'karura' to 'kintsugi' using bridgeSDK cross-chain 'KINT' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 998,
  "toChain": "(rounded 1000)",
}
`;

exports[`'karura' to 'kintsugi' using bridgeSDK cross-chain 'KINT' > fee 1`] = `"(rounded 0.0002)"`;

exports[`'karura' to 'kintsugi' using bridgeSDK cross-chain 'KINT' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'karura' to 'kintsugi' using bridgeSDK cross-chain 'LKSM' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 98,
  "toChain": "(rounded 102)",
}
`;

exports[`'karura' to 'kintsugi' using bridgeSDK cross-chain 'LKSM' > fee 1`] = `"(rounded 0.0002)"`;

exports[`'karura' to 'kintsugi' using bridgeSDK cross-chain 'LKSM' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 100,
  "toChain": 100,
}
`;
